# chqr

./: .coverage  .gitignore  .pre-commit-config.yaml  pyproject.toml
.clinerules/: guidelines.md
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: qr_bill_spec.md  style_guide.md
examples/: generate_svg.py
src/chqr/: __init__.py  creditor.py  debtor.py  qr_bill.py  svg_generator.py  validators.py
tests/: README.md  test_data_structure.py  test_official_data_schema.py  test_qr_bill.py  test_qr_code_integration.py  test_qr_generation.py  test_svg_generation.py  test_validation.py
tests/fixtures/: QR-facture.xml  reference_layout.xml
tests/fixtures/qr_data/: example_1_qrr_with_amount.txt  example_2_with_billing_info.txt  example_3_scor_reference.txt  example_4_donation.txt
