[project]
name = "chqr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gil Balsiger", email = "gil.balsiger@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "qrcode>=8.2",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.4",
]

[tool.ruff]
ignore = [
    "E741",  # ambiguous variable name
]
exclude = [
    "tests/fixtures/",
]
